--- a/frontend/src/pages/printers/[id].astro
+++ b/frontend/src/pages/printers/[id].astro
@@ -95,6 +95,9 @@ const { id } = Astro.params
     await initI18n()
 
     const id = window.location.pathname.split('/').filter(Boolean).pop()!
+    if (id === 'detail') {
+      window.location.href = '/printers'
+    }
 
     let printer: any = null
     
