--- a/frontend/src/pages/filaments/[id]/index.astro
+++ b/frontend/src/pages/filaments/[id]/index.astro
@@ -45,6 +45,9 @@ const { id } = Astro.params
     await initI18n()
 
     const id = window.location.pathname.split('/').filter(Boolean).pop()!
+    if (id === 'detail') {
+      window.location.href = '/filaments'
+    }
 
     let statuses: any[] = []
     let locations: any[] = []
