--- a/frontend/src/pages/spools/[id].astro
+++ b/frontend/src/pages/spools/[id].astro
@@ -84,6 +84,9 @@ const { id } = Astro.params
     await initI18n()
 
     const id = window.location.pathname.split('/').filter(Boolean).pop()!
+    if (id === 'detail') {
+      window.location.href = '/spools'
+    }
 
     let spool = null
     let statuses = []
